# view.py

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  _view.pyi  a.md  app.py  benchmark.py  compile_flags.txt  hatch.toml  hatch_build.py  mkdocs.yml  morals.md  netlify.toml  out.py  program.prof  pyproject.toml  requirements.txt  sample.py  setup.py  status.py  status.txt  test.py  uncrustify.cfg  urls.py  valgrind-python.supp  view.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: Crash_Report.yml  Feature_Request.yml  Improvement_Request.yml  Question.yml  Questions.yaml  RFC.yml  VEP.yml  bug.yml  crash.yml  discussion.yml  feature.yml  improvement.yml
.github/workflows/: build.yml  lint.yml  memory_check.yml  tests.yml  triage.yml
.github/workflows/ISSUE_TEMPLATE/: Bug_Report.yml  Crash_Report.yml
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
client/src/: reactpy.tsx
devpage/: index.html  package-lock.json  package.json  tailwind.config.js
docs/: api.rst  components.md  conf.py  contributing.md  creating.md  home.md  index.md  index.rst  mdx-components.tsx  next.config.mjs  package.json  parameters.md  responses.md  running.md  tailwind.config.ts  welcome.md
docs/building-projects/: app_basics.md  build_steps.md  documenting.md  parameters.md  request_data.md  responses.md  routing.md  templating.md  websockets.md
docs/dev/: app.md  welcome.md
docs/dev-guide/: app.md  index.md  loader.md  logging.md  routing.md  workflow.md
docs/getting-started/: configuration.md  creating_a_project.md  installation.md
docs/reference/: config.md  exceptions.md  routing.md  types.md
docs/reference/functions/: load_config.md  new_app.md
docs/reference/objects/: app.md  config.md
docs/src/components/: Spotlight.tsx  admonition.tsx  animated-modal.tsx  aurora-background.tsx  background-beams.tsx  background-gradient-animation.tsx  background-gradient.tsx  codeblock.tsx  doc-nav.tsx  docs.module.css  footer-content.tsx  mdx-layout.tsx  meteors.tsx  placeholders-and-vanish-input.tsx  search-bar.tsx  stars-background.tsx
docs/src/pages/: _app.tsx  globals.css  index.tsx
docs/src/pages/docs/: index.mdx
docs/src/pages/docs/building-projects/: app-basics.md  app-basics.mdx  builds.mdx  documenting.md  documenting.mdx  parameters.mdx  request-data.mdx  responses.mdx  routing.md  routing.mdx  templating.md  templating.mdx  websockets.md  websockets.mdx
docs/src/pages/docs/getting-started/: configuration.mdx  creating-a-project.mdx  installation.mdx
docs/src/pages/docs/reference/: app.md  build.md  responses.md  routing.md  utils.md
docs/system/: versions.md
docs/user-guide/: creating.md  docs.md  index.md  parameters.md  reference.md
docs/user-guide/building-projects/: app_basics.md  documenting.md  parameters.md  responses.md  routing.md
docs/user-guide/getting-started/: configuration.md  creating_a_project.md  installation.md
docs_md/building-projects/: build_steps.md  parameters.md  responses.md
docs_md/getting-started/: creating_a_project.md
docs_md/reference/: templates.md  websockets.md
html/: base.html  dist.css  home.html  main.css  main.html  package.json  tailwind.config.js
include/view/: app.h  array.h  awaitable.h  backport.h  context.h  error.h  errors.h  handling.h  headerdict.h  inputs.h  map.h  parsers.h  parts.h  pyawaitable.h  request.h  response.h  results.h  route.h  routing.h  socket.h  tcpublic.h  typecodes.h  util.h  view.h  ws.h
new_app/: app.py  pyproject.toml
new_app/routes/: index.py
site/: index.html  sitemap.xml
site/creating/: index.html
site/search/: search_index.json
src/_view/: _view.pyi  app.c  array.c  awaitable.c  backport.c  context.c  error.c  errors.c  handling.c  headerdict.c  inputs.c  main.c  map.c  module.c  parsing.c  parts.c  pyawaitable.c  results.c  route.c  routing.c  sockets.c  tcpublic.c  typecodes.c  util.c  ws.c
src/view/: __about__.py  __init__.py  __main__.py  _codec.py  _docs.py  _loader.py  _logging.py  _parsers.py  _util.py  app.py  asgi.py  body.py  build.py  cache.py  compiler.py  components.py  config.py  databases.py  default_page.py  dom.py  exceptions.py  headers.py  install.py  integrations.py  javascript.py  logging.py  multi_map.py  nodes.py  patterns.py  request.py  response.py  router.py  routing.py  run.py  server.py  status_codes.py  templates.py  testing.py  typecodes.py  typing.py  (+5 more)
src/view.py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/view/core/: __init__.py  app.py  body.py  headers.py  multi_map.py  request.py  response.py  router.py  status_codes.py
src/view/dom/: __init__.py  components.py  core.py  primitives.py
src/view/run/: __init__.py  asgi.py  servers.py  wsgi.py
tests/: conftest.py  leaks.py  test_app.py  test_build.py  test_cache.py  test_dom.py  test_functions.py  test_installs.py  test_loaders.py  test_misc.py  test_requests.py  test_responses.py  test_servers.py  test_status.py  test_templates.py  test_utils.py  test_websocket.py
tests/buildscripts/: failing_build_script.py  failing_req.py  my_build_script.py  req.py
tests/configs/: build_commands.toml  build_platform.toml  build_reqs.toml  build_scripts.toml  fs.toml  simple.toml  subtemplates.toml  templates.toml  urls.toml
tests/fs_routing/: delete.py  get.py  patch.py  post.py  put.py
tests/fs_routing/options/: index.py
tests/other_templates/: something.html
tests/patterns_routes/: _routes.py  urls.py
tests/simple_routes/: first.py  second.py
tests/simple_routes/third/: fourth.py
tests/subtemplates/: sub.html
tests/templates/: index.html  test.md
