[build-system]
requires = ["scikit-build-core>=0.9.0", "hatchling", "pyawaitable"]
build-backend = "hatchling.build"

[project]
name = "view.py"
description = 'The Batteries-Detachable Web Framework.'
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "ZeroIntensity", email = "zintensitydev@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "rich",
    "click",
    "typing_extensions",
    "ujson",
    "configzen",
    "aiofiles",
    "prompts.py",
    "pyawaitable"
]
dynamic = ["version", "license"]

[project.optional-dependencies]
databases = [
    "psycopg2-binary",
    "mysql-connector-python",
    "pymongo",
    "aiosqlite"
]
templates = ["beautifulsoup4", "jinja2", "mako", "django", "chameleon", "markdown"]
fancy = ["psutil", "plotext"]
servers = ["uvicorn[websockets]", "hypercorn", "daphne", "watchfiles"]
full = [
    "psutil",
    "plotext",
    "beautifulsoup4",
    "jinja2",
    "mako",
    "django",
    "chameleon",
    "attrs",
    "psycopg2-binary",
    "mysql-connector-python",
    "pymongo",
    "aiosqlite",
    "markdown",
    "uvicorn",
    "hypercorn",
    "daphne",
    "reactpy",
    "watchfiles"
]

[project.urls]
Documentation = "https://view.zintensity.dev"
Issues = "https://github.com/ZeroIntensity/view.py/issues"
Source = "https://github.com/ZeroIntensity/view.py"
Funding = "https://github.com/sponsors/ZeroIntensity"

[project.scripts]
view = "view.__main__:main"
view-py = "view.__main__:main"

[tool.pytest.ini_options]
pystack_threshold = 60
pystack_args = "--native"
