[build-system]
requires = ["scikit-build-core>=0.9.0", "hatchling>=1", "pyawaitable~=2.0"]
build-backend = "hatchling.build"

[project]
name = "view.py"
description = 'The Batteries-Detachable Web Framework.'
readme = "README.md"
requires-python = ">=3.9"
keywords = []
authors = [
  { name = "Peter Bierma", email = "zintensitydev@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []
dynamic = ["version", "license"]

[project.optional-dependencies]
full = []

[project.urls]
Documentation = "https://view.zintensity.dev"
Issues = "https://github.com/ZeroIntensity/view.py/issues"
Source = "https://github.com/ZeroIntensity/view.py"
Funding = "https://github.com/sponsors/ZeroIntensity"

[project.scripts]
view = "view.__main__:main"
view-py = "view.__main__:main"
