[build-system]
requires = ["hatchling>=1"]
build-backend = "hatchling.build"

[project]
name = "view.py"
description = 'The Batteries-Detachable Web Framework.'
readme = "README.md"
requires-python = ">=3.9"
keywords = []
authors = [
  { name = "Peter Bierma", email = "peter@python.org" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["multidict~=6.5", "loguru~=0.7", "aiofiles~=24.1", "typing_extensions>=4"]
dynamic = ["version", "license"]

[project.optional-dependencies]

[project.urls]
Documentation = "https://view.zintensity.dev"
Issues = "https://github.com/ZeroIntensity/view.py/issues"
Source = "https://github.com/ZeroIntensity/view.py"
Funding = "https://github.com/sponsors/ZeroIntensity"

[project.scripts]
view = "view.__main__:main"
view-py = "view.__main__:main"

[tool.ruff]
exclude = ["tests/"]
line-length = 79
indent-width = 4

[tool.ruff.lint]
ignore = [
  "S101", # We intentionally want assertions to be debug-only
  "EM101", # Improves traceback readability(?), but damages code readability
  "EM102", # Same as above
  "TRY003", # Moves relevant messages away from where they are raised.
  "PLC0415", # This is generally done to avoid circular imports.
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["PLC0414"]
"status_codes.py" = ["N818"]
"primitives.py" = ["A001", "A002", "B008"]
"servers.py" = ["PLC0415", "RET503"]
